--- a/FullApp/package.json
+++ b/FullApp/package.json
@@ -5,7 +5,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
     "node": "^16.0.0",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "require": "^2.4.20"
   },
   "devDependencies": {
     "jest": "^26.6.3"
@@ -13,9 +14,10 @@
   "scripts": {
     "test": "jest"
   },
-
   "jest": {
     "collectCoverage": true,
-    "collectCoverageFrom": ["client/**/*.{js,jsx}"]
+    "collectCoverageFrom": [
+      "client/**/*.{js,jsx}"
+    ]
   }
 }
