--- a/Restaurant_app/package.json
+++ b/Restaurant_app/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "cors": "^2.8.5",
+    "date-holidays": "^3.12.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
     "node": "^16.0.0",
