--- a/Restaurant_app/package.json
+++ b/Restaurant_app/package.json
@@ -2,12 +2,13 @@
   "dependencies": {
     "axios": "^0.21.4",
     "cors": "^2.8.5",
-    "date-holidays": "^3.12.0",
+    "date-holidays": "^3.12.1",
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
     "node": "^16.0.0",
     "pg": "^8.6.0",
-    "require": "^2.4.20"
+    "require": "^0.4.4",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "jest": "^26.6.3"
